ci(sonar): Increase test coverage and resolve maintenance issues